# aa-fastlink

./: .gitignore  Cargo.toml  README.md  bacon.toml
.github/workflows/: build-release.yml  dependabot-auto-merge.yml
src/: config.rs  download.rs  form.rs  main.rs  version.rs
