[package]
name = "aa_fastlink"
version = "0.3.2"
edition = "2024"
description = "Share your Anna's Archive membership, but without leaking your secret key!"
readme = "README.md"
license = "MIT-0"

[[bin]]
name = "aa-fastlink"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.13.*", features = ["blocking", "json", "rustls"] }
serde = { version = "1.0.*", features = ["derive"] }
tokio = { version = "1.52.*", features = ["full"] }
warp = { version = "0.4.*", features = ["server"] }

[dev-dependencies]

[profile.dev]
opt-level = 0
debug = true
strip = false
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false
